miryoku: Provide layers without Tap-Hold
They are not enabled by default but can easily be toggled with a spare
key by modifying LAYOUT_miryoku. Personally, I like using them for some
games where Tap-Hold gets in the way (e.g. for WASD movement). Being
able to toggle them independently for each half allows e.g. WASD
movement and holding space/esc/tab while still giving access to the
number and symbol layers if needed.

--- a/users/manna-harbour_miryoku/miryoku.org
+++ b/users/manna-harbour_miryoku/miryoku.org
@@ -631,7 +631,7 @@ Duplicate base layer tap keys on thumbs rather than trans to enable auto-repeat.
 Produce base layer from separate tap and hold tables.
 
 #+NAME: table-layout-taphold
-#+BEGIN_SRC python :var alphas_table=colemakdh :var thumbs_table=thumbs :var hold_table=hold :var symbol_names_table=symbol-names :var mods_table=mods :var nonkc_table=nonkc :tangle no :results verbatim
+#+BEGIN_SRC python :var alphas_table=colemakdh :var thumbs_table=thumbs :var hold_table=hold :var half_hold="LR" :var symbol_names_table=symbol-names :var mods_table=mods :var nonkc_table=nonkc :tangle no :results verbatim
 width = 19
 mods_dict = dict.fromkeys(mods_table[0])
 nonkc_tuple = tuple(nonkc_table[0])
@@ -642,7 +642,7 @@ for symbol, name, shifted_symbol, shifted_name in symbol_names_table:
 results = ''
 for tap_row, hold_row in zip(alphas_table + thumbs_table, hold_table):
   results += '    '
-  for tap, hold in zip(tap_row, hold_row):
+  for idx, (tap, hold) in enumerate(zip(tap_row, hold_row)):
     if tap == '':
       code = 'U_NU'
     elif tap in symbol_names_dict:
@@ -651,10 +651,11 @@ for tap_row, hold_row in zip(alphas_table + thumbs_table, hold_table):
       code = tap
     if not str(code).startswith(nonkc_tuple):
       code = 'KC_' + str(code)
-    if hold in mods_dict:
-      code = str(hold) + '_T(' + code + ')'
-    elif hold != '' and hold != 'U_NP' and hold != 'RESET':
-      code = 'LT(' + str(hold) + ', ' + code + ')'
+    if 'L' in half_hold and idx < 5 or 'R' in half_hold and idx >= 5:
+      if hold in mods_dict:
+        code = str(hold) + '_T(' + code + ')'
+      elif hold != '' and hold != 'U_NP' and hold != 'RESET':
+        code = 'LT(' + str(hold) + ', ' + code + ')'
     results += (code + ', ').ljust(width)
   results = results.rstrip(' ') + ' \\\n'
 results = results.rstrip('\\\n, ')
@@ -1036,6 +1037,51 @@ included from keymap or layout ~keymap.c~ if needed.
 #define MIRYOKU_TABLE_COLEMAKDH \
   <<table-layout-taphold(alphas_table=colemakdh)>>
 
+#define MIRYOKU_TABLE_COLEMAK_NO_HOLD_FULL \
+  <<table-layout-taphold(alphas_table=colemak, half_hold="")>>
+#define MIRYOKU_TABLE_COLEMAKDHK_NO_HOLD_FULL \
+  <<table-layout-taphold(alphas_table=colemakdhk, half_hold="")>>
+#define MIRYOKU_TABLE_DVORAK_NO_HOLD_FULL \
+  <<table-layout-taphold(alphas_table=dvorak, half_hold="")>>
+#define MIRYOKU_TABLE_HALMAK_NO_HOLD_FULL \
+  <<table-layout-taphold(alphas_table=halmak, half_hold="")>>
+#define MIRYOKU_TABLE_WORKMAN_NO_HOLD_FULL \
+  <<table-layout-taphold(alphas_table=workman, half_hold="")>>
+#define MIRYOKU_TABLE_QWERTY_NO_HOLD_FULL \
+  <<table-layout-taphold(alphas_table=qwerty, half_hold="")>>
+#define MIRYOKU_TABLE_COLEMAKDH_NO_HOLD_FULL \
+  <<table-layout-taphold(alphas_table=colemakdh, half_hold="")>>
+
+#define MIRYOKU_TABLE_COLEMAK_NO_HOLD_R \
+  <<table-layout-taphold(alphas_table=colemak, half_hold="L")>>
+#define MIRYOKU_TABLE_COLEMAKDHK_NO_HOLD_R \
+  <<table-layout-taphold(alphas_table=colemakdhk, half_hold="L")>>
+#define MIRYOKU_TABLE_DVORAK_NO_HOLD_R \
+  <<table-layout-taphold(alphas_table=dvorak, half_hold="L")>>
+#define MIRYOKU_TABLE_HALMAK_NO_HOLD_R \
+  <<table-layout-taphold(alphas_table=halmak, half_hold="L")>>
+#define MIRYOKU_TABLE_WORKMAN_NO_HOLD_R \
+  <<table-layout-taphold(alphas_table=workman, half_hold="L")>>
+#define MIRYOKU_TABLE_QWERTY_NO_HOLD_R \
+  <<table-layout-taphold(alphas_table=qwerty, half_hold="L")>>
+#define MIRYOKU_TABLE_COLEMAKDH_NO_HOLD_R \
+  <<table-layout-taphold(alphas_table=colemakdh, half_hold="L")>>
+
+#define MIRYOKU_TABLE_COLEMAK_NO_HOLD_L \
+  <<table-layout-taphold(alphas_table=colemak, half_hold="R")>>
+#define MIRYOKU_TABLE_COLEMAKDHK_NO_HOLD_L \
+  <<table-layout-taphold(alphas_table=colemakdhk, half_hold="R")>>
+#define MIRYOKU_TABLE_DVORAK_NO_HOLD_L \
+  <<table-layout-taphold(alphas_table=dvorak, half_hold="R")>>
+#define MIRYOKU_TABLE_HALMAK_NO_HOLD_L \
+  <<table-layout-taphold(alphas_table=halmak, half_hold="R")>>
+#define MIRYOKU_TABLE_WORKMAN_NO_HOLD_L \
+  <<table-layout-taphold(alphas_table=workman, half_hold="R")>>
+#define MIRYOKU_TABLE_QWERTY_NO_HOLD_L \
+  <<table-layout-taphold(alphas_table=qwerty, half_hold="R")>>
+#define MIRYOKU_TABLE_COLEMAKDH_NO_HOLD_L \
+  <<table-layout-taphold(alphas_table=colemakdh, half_hold="R")>>
+
 #define MIRYOKU_TABLE_COLEMAK_FLIP \
   <<table-layout-taphold(alphas_table=colemak, thumbs_table=thumbs-flip, hold_table=hold-flip)>>
 #define MIRYOKU_TABLE_COLEMAKDHK_FLIP \
@@ -1050,6 +1096,51 @@ included from keymap or layout ~keymap.c~ if needed.
   <<table-layout-taphold(alphas_table=qwerty, thumbs_table=thumbs-flip, hold_table=hold-flip)>>
 #define MIRYOKU_TABLE_COLEMAKDH_FLIP \
   <<table-layout-taphold(alphas_table=colemakdh, thumbs_table=thumbs-flip, hold_table=hold-flip)>>
+
+#define MIRYOKU_TABLE_COLEMAK_FLIP_NO_HOLD_FULL \
+  <<table-layout-taphold(alphas_table=colemak, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="")>>
+#define MIRYOKU_TABLE_COLEMAKDHK_FLIP_NO_HOLD_FULL \
+  <<table-layout-taphold(alphas_table=colemakdhk, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="")>>
+#define MIRYOKU_TABLE_DVORAK_FLIP_NO_HOLD_FULL \
+  <<table-layout-taphold(alphas_table=dvorak, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="")>>
+#define MIRYOKU_TABLE_HALMAK_FLIP_NO_HOLD_FULL \
+  <<table-layout-taphold(alphas_table=halmak, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="")>>
+#define MIRYOKU_TABLE_WORKMAN_FLIP_NO_HOLD_FULL \
+  <<table-layout-taphold(alphas_table=workman, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="")>>
+#define MIRYOKU_TABLE_QWERTY_FLIP_NO_HOLD_FULL \
+  <<table-layout-taphold(alphas_table=qwerty, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="")>>
+#define MIRYOKU_TABLE_COLEMAKDH_FLIP_NO_HOLD_FULL \
+  <<table-layout-taphold(alphas_table=colemakdh, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="")>>
+
+#define MIRYOKU_TABLE_COLEMAK_FLIP_NO_HOLD_R \
+  <<table-layout-taphold(alphas_table=colemak, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="L")>>
+#define MIRYOKU_TABLE_COLEMAKDHK_FLIP_NO_HOLD_R \
+  <<table-layout-taphold(alphas_table=colemakdhk, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="L")>>
+#define MIRYOKU_TABLE_DVORAK_FLIP_NO_HOLD_R \
+  <<table-layout-taphold(alphas_table=dvorak, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="L")>>
+#define MIRYOKU_TABLE_HALMAK_FLIP_NO_HOLD_R \
+  <<table-layout-taphold(alphas_table=halmak, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="L")>>
+#define MIRYOKU_TABLE_WORKMAN_FLIP_NO_HOLD_R \
+  <<table-layout-taphold(alphas_table=workman, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="L")>>
+#define MIRYOKU_TABLE_QWERTY_FLIP_NO_HOLD_R \
+  <<table-layout-taphold(alphas_table=qwerty, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="L")>>
+#define MIRYOKU_TABLE_COLEMAKDH_FLIP_NO_HOLD_R \
+  <<table-layout-taphold(alphas_table=colemakdh, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="L")>>
+
+#define MIRYOKU_TABLE_COLEMAK_FLIP_NO_HOLD_L \
+  <<table-layout-taphold(alphas_table=colemak, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="R")>>
+#define MIRYOKU_TABLE_COLEMAKDHK_FLIP_NO_HOLD_L \
+  <<table-layout-taphold(alphas_table=colemakdhk, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="R")>>
+#define MIRYOKU_TABLE_DVORAK_FLIP_NO_HOLD_L \
+  <<table-layout-taphold(alphas_table=dvorak, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="R")>>
+#define MIRYOKU_TABLE_HALMAK_FLIP_NO_HOLD_L \
+  <<table-layout-taphold(alphas_table=halmak, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="R")>>
+#define MIRYOKU_TABLE_WORKMAN_FLIP_NO_HOLD_L \
+  <<table-layout-taphold(alphas_table=workman, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="R")>>
+#define MIRYOKU_TABLE_QWERTY_FLIP_NO_HOLD_L \
+  <<table-layout-taphold(alphas_table=qwerty, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="R")>>
+#define MIRYOKU_TABLE_COLEMAKDH_FLIP_NO_HOLD_L \
+  <<table-layout-taphold(alphas_table=colemakdh, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="R")>>
 
 #+END_SRC
 
