--- a/users/manna-harbour_miryoku/miryoku.org
+++ b/users/manna-harbour_miryoku/miryoku.org
@@ -631,7 +631,7 @@ Duplicate base layer tap keys on thumbs rather than trans to enable auto-repeat.
 Produce base layer from separate tap and hold tables.
 
 #+NAME: table-layout-taphold
-#+BEGIN_SRC python :var alphas_table=colemakdh :var thumbs_table=thumbs :var hold_table=hold :var half_hold="LR" :var symbol_names_table=symbol-names :var mods_table=mods :var nonkc_table=nonkc :tangle no :results verbatim
+#+BEGIN_SRC python :var alphas_table=colemakdh :var thumbs_table=thumbs :var hold_table=hold :var no_hold="" :var symbol_names_table=symbol-names :var mods_table=mods :var nonkc_table=nonkc :tangle no :results verbatim
 width = 19
 mods_dict = dict.fromkeys(mods_table[0])
 nonkc_tuple = tuple(nonkc_table[0])
@@ -651,7 +651,9 @@ for tap_row, hold_row in zip(alphas_table + thumbs_table, hold_table):
       code = tap
     if not str(code).startswith(nonkc_tuple):
       code = 'KC_' + str(code)
-    if 'L' in half_hold and idx < 5 or 'R' in half_hold and idx >= 5:
+    if no_hold == 'L' and idx >= 5 or no_hold == 'R' and idx < 5:
+      code = 'KC_TRNS'
+    elif no_hold == '':
       if hold in mods_dict:
         code = str(hold) + '_T(' + code + ')'
       elif hold != '' and hold != 'U_NP' and hold != 'RESET':
@@ -1038,49 +1040,49 @@ included from keymap or layout ~keymap.c~ if needed.
   <<table-layout-taphold(alphas_table=colemakdh)>>
 
 #define MIRYOKU_TABLE_COLEMAK_NO_HOLD_FULL \
-  <<table-layout-taphold(alphas_table=colemak, half_hold="")>>
+  <<table-layout-taphold(alphas_table=colemak, no_hold="LR")>>
 #define MIRYOKU_TABLE_COLEMAKDHK_NO_HOLD_FULL \
-  <<table-layout-taphold(alphas_table=colemakdhk, half_hold="")>>
+  <<table-layout-taphold(alphas_table=colemakdhk, no_hold="LR")>>
 #define MIRYOKU_TABLE_DVORAK_NO_HOLD_FULL \
-  <<table-layout-taphold(alphas_table=dvorak, half_hold="")>>
+  <<table-layout-taphold(alphas_table=dvorak, no_hold="LR")>>
 #define MIRYOKU_TABLE_HALMAK_NO_HOLD_FULL \
-  <<table-layout-taphold(alphas_table=halmak, half_hold="")>>
+  <<table-layout-taphold(alphas_table=halmak, no_hold="LR")>>
 #define MIRYOKU_TABLE_WORKMAN_NO_HOLD_FULL \
-  <<table-layout-taphold(alphas_table=workman, half_hold="")>>
+  <<table-layout-taphold(alphas_table=workman, no_hold="LR")>>
 #define MIRYOKU_TABLE_QWERTY_NO_HOLD_FULL \
-  <<table-layout-taphold(alphas_table=qwerty, half_hold="")>>
+  <<table-layout-taphold(alphas_table=qwerty, no_hold="LR")>>
 #define MIRYOKU_TABLE_COLEMAKDH_NO_HOLD_FULL \
-  <<table-layout-taphold(alphas_table=colemakdh, half_hold="")>>
+  <<table-layout-taphold(alphas_table=colemakdh, no_hold="LR")>>
 
 #define MIRYOKU_TABLE_COLEMAK_NO_HOLD_R \
-  <<table-layout-taphold(alphas_table=colemak, half_hold="L")>>
+  <<table-layout-taphold(alphas_table=colemak, no_hold="R")>>
 #define MIRYOKU_TABLE_COLEMAKDHK_NO_HOLD_R \
-  <<table-layout-taphold(alphas_table=colemakdhk, half_hold="L")>>
+  <<table-layout-taphold(alphas_table=colemakdhk, no_hold="R")>>
 #define MIRYOKU_TABLE_DVORAK_NO_HOLD_R \
-  <<table-layout-taphold(alphas_table=dvorak, half_hold="L")>>
+  <<table-layout-taphold(alphas_table=dvorak, no_hold="R")>>
 #define MIRYOKU_TABLE_HALMAK_NO_HOLD_R \
-  <<table-layout-taphold(alphas_table=halmak, half_hold="L")>>
+  <<table-layout-taphold(alphas_table=halmak, no_hold="R")>>
 #define MIRYOKU_TABLE_WORKMAN_NO_HOLD_R \
-  <<table-layout-taphold(alphas_table=workman, half_hold="L")>>
+  <<table-layout-taphold(alphas_table=workman, no_hold="R")>>
 #define MIRYOKU_TABLE_QWERTY_NO_HOLD_R \
-  <<table-layout-taphold(alphas_table=qwerty, half_hold="L")>>
+  <<table-layout-taphold(alphas_table=qwerty, no_hold="R")>>
 #define MIRYOKU_TABLE_COLEMAKDH_NO_HOLD_R \
-  <<table-layout-taphold(alphas_table=colemakdh, half_hold="L")>>
+  <<table-layout-taphold(alphas_table=colemakdh, no_hold="R")>>
 
 #define MIRYOKU_TABLE_COLEMAK_NO_HOLD_L \
-  <<table-layout-taphold(alphas_table=colemak, half_hold="R")>>
+  <<table-layout-taphold(alphas_table=colemak, no_hold="L")>>
 #define MIRYOKU_TABLE_COLEMAKDHK_NO_HOLD_L \
-  <<table-layout-taphold(alphas_table=colemakdhk, half_hold="R")>>
+  <<table-layout-taphold(alphas_table=colemakdhk, no_hold="L")>>
 #define MIRYOKU_TABLE_DVORAK_NO_HOLD_L \
-  <<table-layout-taphold(alphas_table=dvorak, half_hold="R")>>
+  <<table-layout-taphold(alphas_table=dvorak, no_hold="L")>>
 #define MIRYOKU_TABLE_HALMAK_NO_HOLD_L \
-  <<table-layout-taphold(alphas_table=halmak, half_hold="R")>>
+  <<table-layout-taphold(alphas_table=halmak, no_hold="L")>>
 #define MIRYOKU_TABLE_WORKMAN_NO_HOLD_L \
-  <<table-layout-taphold(alphas_table=workman, half_hold="R")>>
+  <<table-layout-taphold(alphas_table=workman, no_hold="L")>>
 #define MIRYOKU_TABLE_QWERTY_NO_HOLD_L \
-  <<table-layout-taphold(alphas_table=qwerty, half_hold="R")>>
+  <<table-layout-taphold(alphas_table=qwerty, no_hold="L")>>
 #define MIRYOKU_TABLE_COLEMAKDH_NO_HOLD_L \
-  <<table-layout-taphold(alphas_table=colemakdh, half_hold="R")>>
+  <<table-layout-taphold(alphas_table=colemakdh, no_hold="L")>>
 
 #define MIRYOKU_TABLE_COLEMAK_FLIP \
   <<table-layout-taphold(alphas_table=colemak, thumbs_table=thumbs-flip, hold_table=hold-flip)>>
@@ -1098,49 +1100,49 @@ included from keymap or layout ~keymap.c~ if needed.
   <<table-layout-taphold(alphas_table=colemakdh, thumbs_table=thumbs-flip, hold_table=hold-flip)>>
 
 #define MIRYOKU_TABLE_COLEMAK_FLIP_NO_HOLD_FULL \
-  <<table-layout-taphold(alphas_table=colemak, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="")>>
+  <<table-layout-taphold(alphas_table=colemak, thumbs_table=thumbs-flip, hold_table=hold-flip, no_hold="LR")>>
 #define MIRYOKU_TABLE_COLEMAKDHK_FLIP_NO_HOLD_FULL \
-  <<table-layout-taphold(alphas_table=colemakdhk, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="")>>
+  <<table-layout-taphold(alphas_table=colemakdhk, thumbs_table=thumbs-flip, hold_table=hold-flip, no_hold="LR")>>
 #define MIRYOKU_TABLE_DVORAK_FLIP_NO_HOLD_FULL \
-  <<table-layout-taphold(alphas_table=dvorak, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="")>>
+  <<table-layout-taphold(alphas_table=dvorak, thumbs_table=thumbs-flip, hold_table=hold-flip, no_hold="LR")>>
 #define MIRYOKU_TABLE_HALMAK_FLIP_NO_HOLD_FULL \
-  <<table-layout-taphold(alphas_table=halmak, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="")>>
+  <<table-layout-taphold(alphas_table=halmak, thumbs_table=thumbs-flip, hold_table=hold-flip, no_hold="LR")>>
 #define MIRYOKU_TABLE_WORKMAN_FLIP_NO_HOLD_FULL \
-  <<table-layout-taphold(alphas_table=workman, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="")>>
+  <<table-layout-taphold(alphas_table=workman, thumbs_table=thumbs-flip, hold_table=hold-flip, no_hold="LR")>>
 #define MIRYOKU_TABLE_QWERTY_FLIP_NO_HOLD_FULL \
-  <<table-layout-taphold(alphas_table=qwerty, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="")>>
+  <<table-layout-taphold(alphas_table=qwerty, thumbs_table=thumbs-flip, hold_table=hold-flip, no_hold="LR")>>
 #define MIRYOKU_TABLE_COLEMAKDH_FLIP_NO_HOLD_FULL \
-  <<table-layout-taphold(alphas_table=colemakdh, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="")>>
+  <<table-layout-taphold(alphas_table=colemakdh, thumbs_table=thumbs-flip, hold_table=hold-flip, no_hold="LR")>>
 
 #define MIRYOKU_TABLE_COLEMAK_FLIP_NO_HOLD_R \
-  <<table-layout-taphold(alphas_table=colemak, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="L")>>
+  <<table-layout-taphold(alphas_table=colemak, thumbs_table=thumbs-flip, hold_table=hold-flip, no_hold="R")>>
 #define MIRYOKU_TABLE_COLEMAKDHK_FLIP_NO_HOLD_R \
-  <<table-layout-taphold(alphas_table=colemakdhk, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="L")>>
+  <<table-layout-taphold(alphas_table=colemakdhk, thumbs_table=thumbs-flip, hold_table=hold-flip, no_hold="R")>>
 #define MIRYOKU_TABLE_DVORAK_FLIP_NO_HOLD_R \
-  <<table-layout-taphold(alphas_table=dvorak, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="L")>>
+  <<table-layout-taphold(alphas_table=dvorak, thumbs_table=thumbs-flip, hold_table=hold-flip, no_hold="R")>>
 #define MIRYOKU_TABLE_HALMAK_FLIP_NO_HOLD_R \
-  <<table-layout-taphold(alphas_table=halmak, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="L")>>
+  <<table-layout-taphold(alphas_table=halmak, thumbs_table=thumbs-flip, hold_table=hold-flip, no_hold="R")>>
 #define MIRYOKU_TABLE_WORKMAN_FLIP_NO_HOLD_R \
-  <<table-layout-taphold(alphas_table=workman, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="L")>>
+  <<table-layout-taphold(alphas_table=workman, thumbs_table=thumbs-flip, hold_table=hold-flip, no_hold="R")>>
 #define MIRYOKU_TABLE_QWERTY_FLIP_NO_HOLD_R \
-  <<table-layout-taphold(alphas_table=qwerty, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="L")>>
+  <<table-layout-taphold(alphas_table=qwerty, thumbs_table=thumbs-flip, hold_table=hold-flip, no_hold="R")>>
 #define MIRYOKU_TABLE_COLEMAKDH_FLIP_NO_HOLD_R \
-  <<table-layout-taphold(alphas_table=colemakdh, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="L")>>
+  <<table-layout-taphold(alphas_table=colemakdh, thumbs_table=thumbs-flip, hold_table=hold-flip, no_hold="R")>>
 
 #define MIRYOKU_TABLE_COLEMAK_FLIP_NO_HOLD_L \
-  <<table-layout-taphold(alphas_table=colemak, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="R")>>
+  <<table-layout-taphold(alphas_table=colemak, thumbs_table=thumbs-flip, hold_table=hold-flip, no_hold="L")>>
 #define MIRYOKU_TABLE_COLEMAKDHK_FLIP_NO_HOLD_L \
-  <<table-layout-taphold(alphas_table=colemakdhk, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="R")>>
+  <<table-layout-taphold(alphas_table=colemakdhk, thumbs_table=thumbs-flip, hold_table=hold-flip, no_hold="L")>>
 #define MIRYOKU_TABLE_DVORAK_FLIP_NO_HOLD_L \
-  <<table-layout-taphold(alphas_table=dvorak, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="R")>>
+  <<table-layout-taphold(alphas_table=dvorak, thumbs_table=thumbs-flip, hold_table=hold-flip, no_hold="L")>>
 #define MIRYOKU_TABLE_HALMAK_FLIP_NO_HOLD_L \
-  <<table-layout-taphold(alphas_table=halmak, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="R")>>
+  <<table-layout-taphold(alphas_table=halmak, thumbs_table=thumbs-flip, hold_table=hold-flip, no_hold="L")>>
 #define MIRYOKU_TABLE_WORKMAN_FLIP_NO_HOLD_L \
-  <<table-layout-taphold(alphas_table=workman, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="R")>>
+  <<table-layout-taphold(alphas_table=workman, thumbs_table=thumbs-flip, hold_table=hold-flip, no_hold="L")>>
 #define MIRYOKU_TABLE_QWERTY_FLIP_NO_HOLD_L \
-  <<table-layout-taphold(alphas_table=qwerty, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="R")>>
+  <<table-layout-taphold(alphas_table=qwerty, thumbs_table=thumbs-flip, hold_table=hold-flip, no_hold="L")>>
 #define MIRYOKU_TABLE_COLEMAKDH_FLIP_NO_HOLD_L \
-  <<table-layout-taphold(alphas_table=colemakdh, thumbs_table=thumbs-flip, hold_table=hold-flip, half_hold="R")>>
+  <<table-layout-taphold(alphas_table=colemakdh, thumbs_table=thumbs-flip, hold_table=hold-flip, no_hold="L")>>
 
 #+END_SRC
 
